[WFGP-48] Make sure forked embedded controller starts with --add-modules java.se on jdk11